syntax = "proto3";

package paranoid.discoverynetwork.v1;

option go_package = "github.com/cpssd-students/paranoid/proto/paranoid/discoverynetwork/v1;discoverynetwork";

service DiscoveryNetworkService {
  // Discovery Calls
  rpc Join (JoinRequest) returns (JoinResponse) {}
  rpc Disconnect (DisconnectRequest) returns (DisconnectResponse) {}
}

message DisconnectRequest {
  string pool = 1; // required
  string password = 2; // optional
  Node node = 3; // required
}

message DisconnectResponse {}

message JoinRequest {
  string pool = 1; // required
  string password = 2; // optional
  Node node = 3; // required
}

message JoinResponse {
  // The time after which the server will remove the node from the list
  // if the node doesn't make the Renew RPC call
  int64 reset_interval = 1; // required
  repeated Node nodes = 2; // optional
}

message Node {
  string ip = 1; // required
  string port = 2; // required
  string common_name = 3; // required
  string uuid = 4; // required
}
